--- a/myjob/.classpath
+++ b/myjob/.classpath
@@ -37,5 +37,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_31/jre/lib/ext/servlet-api.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
