--- a/myjob/pom.xml
+++ b/myjob/pom.xml
@@ -40,5 +40,10 @@
   		<artifactId>standard</artifactId>
   		<version>1.1.2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.tiles</groupId>
+  		<artifactId>tiles-extras</artifactId>
+  		<version>3.0.0</version>
+  	</dependency>
   </dependencies>
 </project>
