--- a/myjob/pom.xml
+++ b/myjob/pom.xml
@@ -46,9 +46,9 @@
   		<version>3.0.0</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.codehaus.jackson</groupId>
-  		<artifactId>jackson-mapper-asl</artifactId>
-  		<version>1.9.7</version>
+  		<groupId>com.fasterxml.jackson.core</groupId>
+  		<artifactId>jackson-databind</artifactId>
+  		<version>2.2.3</version>
   	</dependency>
   </dependencies>
 </project>
