--- a/myjob/src/main/resources/EntityValues.properties
+++ b/myjob/src/main/resources/EntityValues.properties
@@ -1,9 +1,10 @@
 #Propertiese of converter
-#Sun Apr 26 21:06:32 CST 2015
+#Tue May 05 22:50:12 CST 2015
 JobRequestStatus.canceled=取消/
 Qualification.bachelor=学士/
 JobRequestStatus.approved=通过/
 JobStatus.disabled=无效/
+MaritalStatus.unknown=不清楚/
 Qualification.associate=大专/
 Qualification.master=硕士/
 ResumeStatus.active=有效/
@@ -13,12 +14,14 @@ UserStatus.active=有效/
 JobStatus.active=有效/
 UserStatus.deleted=删除/
 CompanyStatus.deleted=删除/
-G/er.female=女/
 JobRequestStatus.rejected=拒绝/
 AccountType.company=公司/
 JobRequestStatus.requested=请求/
+MaritalStatus.married=已婚/
 Qualification.doctor=博士/
 ResumeStatus.deleted=删除/
 AccountType.user=用户/
+MaritalStatus.unMarried=未婚/
+Gender.female=女/
 CompanyStatus.active=有效/
-G/er.male=男/
+Gender.male=男/
