refine entity-value reader.

--- a/myjob/src/main/resources/EntityValues.properties
+++ b/myjob/src/main/resources/EntityValues.properties
@@ -22,6 +22,6 @@ Qualification.doctor=博士/
 ResumeStatus.deleted=删除/
 AccountType.user=用户/
 MaritalStatus.unMarried=未婚/
-Gender.female=女/
+Gender.female=\u5973
 CompanyStatus.active=有效/
-Gender.male=男/
+Gender.male=\u7537
