--- a/myjob/src/main/resources/EntityValues.properties
+++ b/myjob/src/main/resources/EntityValues.properties
@@ -1,27 +1,27 @@
 #Propertiese of converter
 #Tue May 05 22:50:12 CST 2015
-JobRequestStatus.canceled=取消/
-Qualification.bachelor=学士/
-JobRequestStatus.approved=通过/
-JobStatus.disabled=无效/
-MaritalStatus.unknown=不清楚/
-Qualification.associate=大专/
-Qualification.master=硕士/
-ResumeStatus.active=有效/
-ResumeStatus.inactive=无效/
-Qualification.other=其他/
-UserStatus.active=有效/
-JobStatus.active=有效/
-UserStatus.deleted=删除/
-CompanyStatus.deleted=删除/
-JobRequestStatus.rejected=拒绝/
-AccountType.company=公司/
-JobRequestStatus.requested=请求/
-MaritalStatus.married=已婚/
-Qualification.doctor=博士/
-ResumeStatus.deleted=删除/
-AccountType.user=用户/
-MaritalStatus.unMarried=未婚/
-Gender.female=\u5973
-CompanyStatus.active=有效/
-Gender.male=\u7537
+JobRequestStatus.canceled=取消
+Qualification.bachelor=学士
+JobRequestStatus.approved=通过
+JobStatus.disabled=无效
+MaritalStatus.unknown=不清楚
+Qualification.associate=大专
+Qualification.master=硕士
+ResumeStatus.active=有效
+ResumeStatus.inactive=无效
+Qualification.other=其他
+UserStatus.active=有效
+JobStatus.active=有效
+UserStatus.deleted=删除
+CompanyStatus.deleted=删除
+JobRequestStatus.rejected=拒绝
+AccountType.company=公司
+JobRequestStatus.requested=请求
+MaritalStatus.married=已婚
+Qualification.doctor=博士
+ResumeStatus.deleted=删除
+AccountType.user=用户
+MaritalStatus.unMarried=未婚
+Gender.female=女
+CompanyStatus.active=有效
+Gender.male=男
