--- a/myjob/pom.xml
+++ b/myjob/pom.xml
@@ -50,5 +50,10 @@
   		<artifactId>jackson-databind</artifactId>
   		<version>2.2.3</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-aspects</artifactId>
+  		<version>4.1.5.RELEASE</version>
+  	</dependency>
   </dependencies>
 </project>
