--- a/myjob/.settings/org.eclipse.core.resources.prefs
+++ b/myjob/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/resources/EntityValues.properties=UTF-8
 encoding//src/main/webapp/WEB-INF/layouts/layout.jsp=UTF-8
+encoding//src/main/webapp/content/site.css=UTF-8
+encoding/<project>=UTF-8
