update chinese of bachelor

--- a/myjob/src/main/resources/EntityValues.properties
+++ b/myjob/src/main/resources/EntityValues.properties
@@ -1,7 +1,7 @@
 #Propertiese of converter
 #Tue May 05 22:50:12 CST 2015
 JobRequestStatus.canceled=取消
-Qualification.bachelor=学士
+Qualification.bachelor=本科
 JobRequestStatus.approved=通过
 JobStatus.disabled=无效
 MaritalStatus.unknown=不清楚
