--- a/myjob/pom.xml
+++ b/myjob/pom.xml
@@ -55,5 +55,11 @@
   		<artifactId>spring-aspects</artifactId>
   		<version>4.1.5.RELEASE</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.logging.log4j</groupId>
+  		<artifactId>log4j</artifactId>
+  		<version>2.3</version>
+  		<type>pom</type>
+  	</dependency>
   </dependencies>
 </project>
